@@ -1,3 +1,4 @@
+230129 remove atari alternative
 230123 hop off detection
 230123 projector hash error fixed
 230123 add tensorboard writer
